--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,36 @@ google-auth
 google-auth-oauthlib
 google-auth-httplib2
 google-api-python-client
-string
-random
+numpy
+apscheduler
+
+pip
+rsa
+pyasn1
+pytz
+setuptools
+pyasn1-modules
+cachetools
+certifi
+urllib3
+requests
+tzlocal
+pyparsing
+httplib2
+oauthlib
+idna
+six
+uritemplate
+schedule
+pyinstaller
+
+pyasn1_modules
+packaging
+altgraph
+pefile
+
+pyasn1_modules
+packaging
+altgraph
+pefile
+
